# scum

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  package.yaml  scum.cabal
app/: Main.hs
proptest-regressions/: parser.txt
scum-lib/: Cargo.toml
scum-lib/proptest-regressions/: parse.txt  read.txt
scum-lib/src/: error.rs  eval.rs  expression.rs  grammar.pest  lib.rs  macros.rs  parse.rs  parser.rs  print.rs  read.rs
scum-repl/: Cargo.toml
scum-repl/src/: main.rs
src/: Scum.hs  error.rs  eval.rs  expression.rs  grammar.pest  lib.rs  main.rs  parser.rs  print.rs  read.rs
src/Scum/: Expression.hs  Extra.hs
