cabal-version:   3.6
name:            scum
version:         0.1.0.0
license:         MIT
author:          Graham Enos
maintainer:      genos@rigetti.com
build-type:      Simple
category:        Math
synopsis:        Write me a Scheme-ish
description:     Write me a Scheme-ish; probably won't be as good as the real thing

common common
    default-language: Haskell2010
    ghc-options: -Wall -Wextra

library
    import:           common
    exposed-modules:  Scum
    build-depends:
        base ^>=4.17.0.0,
        attoparsec ^>= 0.14.4,
        containers ^>= 0.6.7,
        text ^>= 2.0.2,
        transformers ^>= 0.6.1.0,
        vector ^>= 0.13.0.0
    hs-source-dirs:   src

executable scum
    import:           common
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.0.0,
        optparse-applicative ^>= 0.17.0.0,
        scum
    hs-source-dirs:   app

test-suite scum-test
    import:           common
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.0.0,
        hedgehog ^>=1.2,
        scum
